--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remix-run/cloudflare": "^1.12.0",
     "@remix-run/cloudflare-pages": "^1.12.0",
     "@remix-run/react": "^1.12.0",
+    "base64-encoding": "^0.15.0-alpha.0",
     "cross-env": "^7.0.3",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
