--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css",
     "start": "cross-env NODE_ENV=production npm run wrangler",
     "typecheck": "tsc",
-    "wrangler": "wrangler pages dev ./public"
+    "wrangler": "wrangler pages dev ./public -k PRIVATE_NOTES"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
+    "@paralleldrive/cuid2": "^2.0.1",
     "@remix-run/cloudflare": "^1.12.0",
     "@remix-run/cloudflare-pages": "^1.12.0",
     "@remix-run/react": "^1.12.0",
