mistake in github action for linting

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -6,11 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
-    defaults:
-      run:
-        working-directory: api
-
+  lint:
     name: Lint
     runs-on: ubuntu-latest
     steps:
