--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "cross-env": "^7.0.3",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-json-tree": "^0.18.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
