--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "cross-env NODE_ENV=production npm run wrangler",
     "typecheck": "tsc",
     "wrangler": "wrangler pages dev ./public -k PRIVATE_NOTES",
-    "lint": "eslint --ext \".js,.jsx,.ts,.tsx\" --ignore-path .gitignore ."
+    "lint": "eslint --ext \".js,.jsx,.ts,.tsx\" --ignore-path .gitignore .",
+    "prettier": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@floating-ui/react": "^0.19.2",
