--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@remix-run/cloudflare": "^1.12.0",
     "@remix-run/cloudflare-pages": "^1.12.0",
     "@remix-run/react": "^1.12.0",
+    "@types/prismjs": "^1.26.0",
     "base64-encoding": "^0.15.0-alpha.0",
     "cross-env": "^7.0.3",
     "prettier": "^2.8.4",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-json-tree": "^0.18.0"
+    "react-json-tree": "^0.18.0",
+    "react-simple-code-editor": "^0.13.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
