--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "run-s \"build:*\"",
-    "build:css": "npm run generate:css -- --minify",
-    "build:remix": "remix build",
-    "dev": "run-p \"dev:*\"",
-    "dev:css": "npm run generate:css -- --watch",
+    "build": "remix build",
+    "dev": "npm-run-all build --parallel \"dev:*\"",
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development npm run wrangler",
-    "generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css",
     "start": "cross-env NODE_ENV=production npm run wrangler",
     "typecheck": "tsc",
     "wrangler": "wrangler pages dev ./public -k PRIVATE_NOTES",
@@ -21,10 +17,9 @@
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
     "@paralleldrive/cuid2": "^2.0.1",
-    "@remix-run/cloudflare": "^1.12.0",
-    "@remix-run/cloudflare-pages": "^1.12.0",
-    "@remix-run/react": "^1.12.0",
-    "@types/prismjs": "^1.26.0",
+    "@remix-run/cloudflare": "^1.13.0",
+    "@remix-run/cloudflare-pages": "^1.13.0",
+    "@remix-run/react": "^1.13.0",
     "base64-encoding": "^0.15.0-alpha.0",
     "cross-env": "^7.0.3",
     "prettier": "^2.8.4",
@@ -36,12 +31,14 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
-    "@remix-run/dev": "^1.12.0",
-    "@remix-run/eslint-config": "^1.12.0",
+    "@remix-run/dev": "^1.13.0",
+    "@remix-run/eslint-config": "^1.13.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.27.0",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.2.6",
