--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18.2.0",
     "react-json-tree": "^0.18.0",
     "react-simple-code-editor": "^0.13.1",
-    "use-keyboard-shortcut": "^1.1.6"
+    "use-keyboard-shortcut": "^1.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
@@ -42,6 +43,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "npm-run-all": "^4.1.5",
