--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "remix build",
     "dev": "npm-run-all build --parallel \"dev:*\"",
     "dev:remix": "remix watch",
-    "dev:wrangler": "cross-env NODE_ENV=development npm run wrangler",
+    "dev:wrangler": "cross-env NODE_ENV=development npm run wrangler --binding $(cat .env)",
     "start": "cross-env NODE_ENV=production npm run wrangler",
     "typecheck": "tsc",
     "wrangler": "wrangler pages dev ./public -k PRIVATE_NOTES",
