--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules
 /functions/\[\[path\]\].js.map
 /public/build
 .env
+.dev.vars
 /test-results/
 /playwright-report/
 /playwright/.cache/
