--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@remix-run/react": "^1.15",
     "base64-encoding": "^0.15.0-alpha.0",
     "cross-env": "^7.0.3",
+    "date-fns": "^2.29.3",
     "prettier": "^2.8.7",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
