upgrade to remix 2.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules
 
 /.cache
-/functions/\[\[path\]\].js
-/functions/\[\[path\]\].js.map
+/.wrangler
+/functions
 /public/build
 .env
 .dev.vars
