--- a/package.json
+++ b/package.json
@@ -1,59 +1,59 @@
 {
   "private": true,
   "sideEffects": false,
+  "type": "module",
   "scripts": {
     "build": "remix build",
-    "dev": "npm-run-all build --parallel \"dev:*\"",
-    "dev:remix": "remix watch",
-    "dev:wrangler": "cross-env NODE_ENV=development npm run wrangler --binding $(cat .env)",
-    "start": "cross-env NODE_ENV=production npm run wrangler",
+    "dev": "remix dev --manual -c \"npm run start\"",
+    "start": "wrangler pages dev --compatibility-date=2023-06-21 ./public",
     "typecheck": "tsc",
-    "wrangler": "wrangler pages dev ./public -k PRIVATE_NOTES",
     "lint": "eslint --ext \".js,.jsx,.ts,.tsx\" --ignore-path .gitignore .",
     "prettier": "prettier --write --ignore-path .gitignore .",
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.22.0",
-    "@headlessui/react": "^1.7.13",
+    "@floating-ui/react": "^0.26.2",
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.16",
-    "@paralleldrive/cuid2": "^2.2.0",
-    "@remix-run/cloudflare": "^1.15",
-    "@remix-run/cloudflare-pages": "^1.15",
-    "@remix-run/react": "^1.15",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@remix-run/cloudflare": "^v2.2.0",
+    "@remix-run/cloudflare-pages": "^v2.2.0",
+    "@remix-run/css-bundle": "^2.2.0",
+    "@remix-run/react": "^v2.2.0",
     "base64-encoding": "^0.15.0-alpha.0",
     "cross-env": "^7.0.3",
-    "date-fns": "^2.29.3",
-    "prettier": "^2.8.7",
-    "prismjs": "^1.29.0",
+    "date-fns": "^2.30.0",
+    "highlight.js": "^11.9.0",
+    "isbot": "^3.7.0",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-json-tree": "^0.18.0",
     "react-simple-code-editor": "^0.13.1",
-    "sql-formatter": "^12.2.0",
+    "sql-formatter": "^13.1.0",
     "use-keyboard-shortcut": "^1.1.6",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.18.0",
-    "@playwright/test": "^1.32.1",
-    "@remix-run/dev": "^1.15",
-    "@remix-run/eslint-config": "^1.15",
-    "@remix-run/testing": "^1.15",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/prismjs": "^1.26.0",
+    "@cloudflare/workers-types": "^4.20231025.0",
+    "@playwright/test": "^1.39.0",
+    "@remix-run/dev": "^v2.2.0",
+    "@remix-run/eslint-config": "^v2.2.0",
+    "@remix-run/testing": "^v2.2.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/uuid": "^9.0.1",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
+    "@types/uuid": "^9.0.7",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^4.9.5",
-    "wrangler": "^2.12.3"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "wrangler": "^3.15.0"
   },
   "engines": {
-    "node": ">=16.13"
+    "node": ">=20.9"
   }
 }
