add basic qr code generator

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "highlight.js": "^11.9.0",
     "isbot": "^3.7.0",
     "prettier": "^3.0.3",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-json-tree": "^0.18.0",
