--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
     "base64-encoding": "^0.15.0-alpha.0",
     "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.0.6",
     "highlight.js": "^11.9.0",
     "isbot": "^3.7.0",
+    "marked": "^10.0.0",
     "prettier": "^3.0.3",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-json-tree": "^0.18.0",
-    "react-simple-code-editor": "^0.13.1",
     "sql-formatter": "^13.1.0",
+    "react-simple-code-editor": "^0.13.1",
     "use-keyboard-shortcut": "^1.1.6",
     "uuid": "^9.0.1"
   },
@@ -43,6 +45,7 @@
     "@remix-run/testing": "^v2.2.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/dompurify": "^3.0.5",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
