--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 node_modules
 
 /.cache
-/.wrangler
-/functions
-/public/build
+/build
 .env
-.dev.vars
-/test-results/
+
+.wrangler
+
 /playwright-report/
 /playwright/.cache/
