--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev --manual -c \"npm run start\"",
-    "start": "wrangler pages dev --kv=PRIVATE_NOTES --compatibility-date=2023-06-21 ./public",
+    "dev": "remix vite:dev",
+    "build": "remix vite:build",
+    "start": "wrangler pages dev ./build/client",
     "typecheck": "tsc",
-    "lint": "eslint --ext \".js,.jsx,.ts,.tsx\" --ignore-path .gitignore .",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "prettier": "prettier --write --ignore-path .gitignore .",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "typegen": "wrangler types"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.2",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.16",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@remix-run/cloudflare": "^v2.2.0",
-    "@remix-run/cloudflare-pages": "^v2.2.0",
-    "@remix-run/css-bundle": "^2.2.0",
-    "@remix-run/react": "^v2.2.0",
+    "@remix-run/cloudflare": "2.8.0",
+    "@remix-run/cloudflare-pages": "2.8.0",
+    "@remix-run/react": "2.8.0",
     "base64-encoding": "^0.15.0-alpha.0",
     "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.6",
     "highlight.js": "^11.9.0",
-    "isbot": "^3.7.0",
+    "isbot": "^4.1.0",
     "jszip": "^3.10.1",
     "marked": "^10.0.0",
     "prettier": "^3.0.3",
@@ -38,14 +38,15 @@
     "react-simple-code-editor": "^0.13.1",
     "sql-formatter": "^13.1.0",
     "use-keyboard-shortcut": "^1.1.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "miniflare": "^3.20231030.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231025.0",
     "@playwright/test": "^1.39.0",
-    "@remix-run/dev": "^v2.2.0",
-    "@remix-run/eslint-config": "^v2.2.0",
-    "@remix-run/testing": "^v2.2.0",
+    "@remix-run/dev": "2.8.0",
+    "@remix-run/eslint-config": "2.8.0",
+    "@remix-run/testing": "2.8.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/dompurify": "^3.0.5",
@@ -53,11 +54,20 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "wrangler": "^3.15.0"
+    "vite": "^5.1.4",
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^3.24.0"
   },
   "engines": {
     "node": ">=20.9"
