--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@remix-run/cloudflare": "2.8.1",
-    "@remix-run/cloudflare-pages": "2.8.1",
-    "@remix-run/react": "2.8.1",
+    "@remix-run/cloudflare": "^2.13.1",
+    "@remix-run/cloudflare-pages": "^2.13.1",
+    "@remix-run/react": "^2.13.1",
     "base64-encoding": "^0.15.0-alpha.0",
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.11",
@@ -28,7 +28,7 @@
     "jszip": "^3.10.1",
     "marked": "^12.0.1",
     "prettier": "^3.2.5",
-    "qrcode.react": "^3.1.0",
+    "qrcode.react": "^4.0.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -41,7 +41,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240320.1",
     "@playwright/test": "^1.42.1",
-    "@remix-run/dev": "2.8.1",
+    "@remix-run/dev": "^2.13.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "@types/dompurify": "^3.0.5",
@@ -59,7 +59,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3",
-    "vite": "^5.2.7",
+    "vite": "^5.4.8",
     "vite-tsconfig-paths": "^4.3.2",
     "wrangler": "^3.41.0"
   },
