--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,9 @@
-compatibility_date = "2023-06-21"
+compatibility_date = "2024-11-11"
 compatibility_flags = []
 
 [[kv_namespaces]]
 binding = "PRIVATE_NOTES"
 id = "PRIVATE_NOTES"
+
+[observability]
+enabled = true
