--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "remix vite:dev",
-    "build": "remix vite:build",
+    "dev": "react-router dev",
+    "build": "react-router build",
     "start": "wrangler pages dev ./build/client",
-    "typecheck": "tsc",
+    "typecheck": "react-router typegen && tsc",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "prettier": "prettier --write --ignore-path .gitignore .",
     "test:e2e": "playwright test",
@@ -17,9 +17,8 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@remix-run/cloudflare": "^2.15.2",
-    "@remix-run/cloudflare-pages": "^2.15.2",
-    "@remix-run/react": "^2.15.2",
+    "@react-router/cloudflare": "^7.0.0",
+    "@react-router/fs-routes": "^7.1.3",
     "base64-encoding": "^0.15.0-alpha.0",
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.11",
@@ -34,6 +33,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-json-tree": "^0.18.0",
+    "react-router": "^7.0.0",
     "react-simple-code-editor": "^0.13.1",
     "sql-formatter": "^15.3.0",
     "uuid": "^9.0.1"
@@ -41,7 +41,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240320.1",
     "@playwright/test": "^1.49.1",
-    "@remix-run/dev": "^2.15.2",
+    "@react-router/dev": "^7.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "@types/dompurify": "^3.0.5",
