trying to make it work with cloudflare-pages

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "utiliti"
 compatibility_date = "2024-11-11"
-compatibility_flags = []
+compatibility_flags = [ "nodejs_compat" ]
 main = "./build/server/index.js"
 assets = { directory = "./build/client/" }
 
