--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
     "@react-router/fs-routes": "^7.1.3",
+    "@react-router/cloudflare": "^7.1.3",
     "base64-encoding": "^0.15.0-alpha.0",
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.11",
