--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "utiliti"
 compatibility_date = "2024-11-11"
 compatibility_flags = [ "nodejs_compat" ]
+pages_build_output_dir = "./build/client"
 
 [[kv_namespaces]]
 binding = "PRIVATE_NOTES"
