return commented out code

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,11 @@
 name = "utiliti"
 compatibility_date = "2024-11-11"
 compatibility_flags = []
+pages_build_output_dir = "./build/client"
 
 [[kv_namespaces]]
 binding = "PRIVATE_NOTES"
 id = "PRIVATE_NOTES"
+
+[observability]
+enabled = true
