[Chore] Upgrade to react-router from remix v2 (#62)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "**/.server/**/*.ts",
-    "**/.server/**/*.tsx",
-    "**/.client/**/*.ts",
-    "**/.client/**/*.tsx"
+    ".react-router/types/**/*",
+    "app/**/*",
+    "app/**/.server/**/*",
+    "app/**/.client/**/*",
+    "worker-configuration.d.ts"
   ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["@remix-run/cloudflare", "vite/client"],
+    "types": ["@cloudflare/workers-types", "vite/client"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -25,6 +24,8 @@
     "paths": {
       "~/*": ["./app/*"]
     },
+    "checkJs": true,
+    "verbatimModuleSyntax": true,
 
     // Vite takes care of building everything, not tsc.
     "noEmit": true
