--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "remix vite:dev",
-    "build": "remix vite:build",
+    "dev": "react-router dev",
+    "build": "react-router build",
     "start": "wrangler pages dev ./build/client",
-    "typecheck": "tsc",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "typecheck": "react-router typegen && tsc",
     "prettier": "prettier --write --ignore-path .gitignore .",
     "test:e2e": "playwright test",
     "typegen": "wrangler types"
@@ -17,14 +16,12 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@remix-run/cloudflare": "^2.15.2",
-    "@remix-run/cloudflare-pages": "^2.15.2",
-    "@remix-run/react": "^2.15.2",
+    "@react-router/cloudflare": "^7.1.3",
     "base64-encoding": "^0.15.0-alpha.0",
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.11",
     "highlight.js": "^11.9.0",
-    "isbot": "^4.4.0",
+    "isbot": "^5.1.17",
     "jszip": "^3.10.1",
     "marked": "^12.0.1",
     "prettier": "^3.2.5",
@@ -34,33 +31,27 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-json-tree": "^0.18.0",
+    "react-router": "^7.1.3",
     "react-simple-code-editor": "^0.13.1",
     "sql-formatter": "^15.3.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240320.1",
+    "@cloudflare/workers-types": "^4.20241112.0",
     "@playwright/test": "^1.49.1",
-    "@remix-run/dev": "^2.15.2",
+    "@react-router/dev": "^7.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "@types/dompurify": "^3.0.5",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.3",
-    "vite": "^5.4.8",
-    "vite-tsconfig-paths": "^4.3.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
+    "vite-tsconfig-paths": "^5.1.4",
     "wrangler": "^3.103.2"
   },
   "engines": {
