--- a/package.json
+++ b/package.json
@@ -12,47 +12,51 @@
     "typegen": "wrangler types"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.26.10",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.3",
+    "@floating-ui/react": "^0.27.3",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@react-router/cloudflare": "^7.1.3",
     "base64-encoding": "^0.15.0-alpha.0",
-    "date-fns": "^2.30.0",
-    "dompurify": "^3.0.11",
-    "highlight.js": "^11.9.0",
-    "isbot": "^5.1.17",
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.2.3",
+    "highlight.js": "^11.11.1",
+    "isbot": "^5.1.21",
     "jszip": "^3.10.1",
-    "marked": "^12.0.1",
-    "prettier": "^3.2.5",
-    "qrcode.react": "^4.0.1",
-    "react": "^18.2.0",
+    "marked": "^15.0.6",
+    "prettier": "^3.4.2",
+    "qrcode.react": "^4.2.0",
+    "react": "^19.0.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
-    "react-json-tree": "^0.18.0",
+    "react-dom": "^19.0.0",
+    "react-json-tree": "^0.19.0",
     "react-router": "^7.1.3",
-    "react-simple-code-editor": "^0.13.1",
-    "sql-formatter": "^15.3.0",
-    "uuid": "^9.0.1"
+    "react-simple-code-editor": "^0.14.1",
+    "sql-formatter": "^15.4.9",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241112.0",
+    "@cloudflare/workers-types": "^4.20250109.0",
     "@playwright/test": "^1.49.1",
-    "@react-router/dev": "^7.0.0",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.12",
-    "@types/dompurify": "^3.0.5",
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
-    "@types/uuid": "^9.0.8",
+    "@react-router/dev": "^7.1.3",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.7",
     "vite-tsconfig-paths": "^5.1.4",
     "wrangler": "^3.103.2"
+  },
+  "overrides": {
+    "react-json-tree": {
+      "@types/react": "^19.0.7",
+      "react": "^19.0.0"
+    }
   },
   "engines": {
     "node": ">=20.9"
