--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.2.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@react-router/cloudflare": "^7.1.3",
+    "@tailwindcss/vite": "^4.0.9",
     "base64-encoding": "^0.15.0-alpha.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.3",
