--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dompurify": "^3.2.4",
     "highlight.js": "^11.11.1",
     "isbot": "^5.1.23",
+    "js-beautify": "^1.15.4",
     "jszip": "^3.10.1",
     "marked": "^15.0.7",
     "prettier": "^3.5.2",
@@ -44,6 +45,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/js-beautify": "^1.14.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "postcss": "^8.5.3",
