--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "typecheck": "react-router typegen && tsc",
     "prettier": "prettier --write --ignore-path .gitignore .",
     "test:e2e": "playwright test",
-    "typegen": "wrangler types"
+    "typegen": "wrangler types",
+    "lint": "eslint --ext \".js,.jsx,.ts,.tsx\""
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.5",
@@ -18,6 +19,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@react-router/cloudflare": "^7.2.0",
     "@tailwindcss/vite": "^4.0.9",
+    "babel-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
     "base64-encoding": "^0.15.0-alpha.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
@@ -35,10 +37,12 @@
     "react-router": "^7.2.0",
     "react-simple-code-editor": "^0.14.1",
     "sql-formatter": "^15.4.11",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "vite-plugin-babel": "^1.3.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250224.0",
+    "@eslint/compat": "^1.2.7",
     "@playwright/test": "^1.50.1",
     "@react-router/dev": "^7.2.0",
     "@tailwindcss/forms": "^0.5.10",
@@ -46,10 +50,13 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9",
     "typescript": "^5.8.2",
     "vite": "^6.2.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^5.1.4",
     "wrangler": "^3.111.0"
   },
