--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prettier": "prettier --write --ignore-path .gitignore .",
     "test:e2e": "playwright test",
     "typegen": "wrangler types",
-    "lint": "eslint --ext \".js,.jsx,.ts,.tsx\""
+    "lint": "eslint"
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.5",
@@ -41,6 +41,11 @@
     "vite-plugin-babel": "^1.3.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.25.0",
     "@cloudflare/workers-types": "^4.20250224.0",
     "@eslint/compat": "^1.2.7",
     "@playwright/test": "^1.50.1",
@@ -50,11 +55,10 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "eslint": "^9.21.0",
     "eslint-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9",
-    "typescript": "^5.8.2",
+    "typescript": "^5.7.3",
     "vite": "^6.2.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^5.1.4",
