--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,5 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: ESLint
+        run: npm run lint
+
       - name: Prettier
         run: ./node_modules/.bin/prettier --check --ignore-path .gitignore .
