--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,9 @@
 name = "utiliti"
-compatibility_date = "2024-11-11"
-compatibility_flags = []
+workers_dev = true
+name = "my-react-router-worker"
+compatibility_date = "2024-11-18"
+main = "./build/server/index.js"
+assets = { directory = "./build/client/" }
 
 [[kv_namespaces]]
 binding = "PRIVATE_NOTES"
