--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@paralleldrive/cuid2": "^3.0.0",
     "@react-router/cloudflare": "^7.12.0",
     "@tailwindcss/vite": "^4.0.12",
-    "babel-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
+    "babel-plugin-react-compiler": "^1.0.0",
     "base64-encoding": "^0.15.0-alpha.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
@@ -29,10 +29,10 @@
     "marked": "^17.0.1",
     "prettier": "^3.5.3",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
+    "react": "^19.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.0",
     "react-json-tree": "^0.20.0",
     "react-router": "^7.12.0",
     "react-simple-code-editor": "^0.14.1",
@@ -53,7 +53,7 @@
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "globals": "^17.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.12",
