--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "utiliti"
-compatibility_date = "2025-01-01"
-compatibility_flags = ["nodejs_compat_v2"]
+compatibility_date = "2025-11-17"
+compatibility_flags = ["nodejs_compat"]
 
 [[kv_namespaces]]
 binding = "PRIVATE_NOTES"
