--- a/package.json
+++ b/package.json
@@ -16,36 +16,36 @@
     "@floating-ui/react": "^0.27.5",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@paralleldrive/cuid2": "^2.2.2",
-    "@react-router/cloudflare": "^7.2.0",
+    "@paralleldrive/cuid2": "^3.0.0",
+    "@react-router/cloudflare": "^7.12.0",
     "@tailwindcss/vite": "^4.0.12",
-    "babel-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
+    "babel-plugin-react-compiler": "^1.0.0",
     "base64-encoding": "^0.15.0-alpha.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
     "highlight.js": "^11.11.1",
     "isbot": "^5.1.23",
     "jszip": "^3.10.1",
-    "marked": "^15.0.7",
+    "marked": "^17.0.1",
     "prettier": "^3.5.3",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
+    "react": "^19.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.0",
     "react-json-tree": "^0.20.0",
-    "react-router": "^7.2.0",
+    "react-router": "^7.12.0",
     "react-simple-code-editor": "^0.14.1",
     "sql-formatter": "^15.4.11",
-    "uuid": "^11.1.0",
+    "uuid": "^13.0.0",
     "vite-plugin-babel": "^1.3.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250303.0",
-    "@eslint/compat": "^1.2.7",
+    "@eslint/compat": "^2.0.1",
     "@eslint/js": "^9.22.0",
     "@playwright/test": "^1.51.0",
-    "@react-router/dev": "^7.2.0",
+    "@react-router/dev": "^7.12.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.12",
     "@tailwindcss/typography": "^0.5.16",
@@ -53,17 +53,17 @@
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
-    "globals": "^16.0.0",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
+    "globals": "^17.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.12",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0",
-    "vite": "^6.2.3",
-    "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "^3.114.0"
+    "vite": "^7.0.0",
+    "vite-tsconfig-paths": "^6.0.4",
+    "wrangler": "^4.0.0"
   },
   "engines": {
-    "node": ">=20.9"
+    "node": ">=22.16.0"
   }
 }
