--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "babel-plugin-react-compiler": "^1.0.0",
     "base64-encoding": "^0.15.0-alpha.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
     "highlight.js": "^11.11.1",
@@ -37,6 +38,7 @@
     "react-router": "^7.12.0",
     "react-simple-code-editor": "^0.14.1",
     "sql-formatter": "^15.6.12",
+    "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "vite-plugin-babel": "^1.3.2"
   },
