--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "react-router dev",
-    "build": "react-router build && wrangler pages functions build --outdir=./build/worker/",
+    "build": "react-router build",
+    "deploy": "npm run build && wrangler deploy",
     "start": "wrangler dev",
-    "typecheck": "react-router typegen && tsc",
+    "typecheck": "wrangler types && react-router typegen && tsc",
     "prettier": "prettier --write --ignore-path .gitignore .",
     "test:e2e": "playwright test",
     "typegen": "wrangler types",
@@ -41,6 +42,7 @@
     "vite-plugin-babel": "^1.3.2"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.20.1",
     "@cloudflare/workers-types": "^4.20260109.0",
     "@eslint/compat": "^2.0.1",
     "@eslint/js": "^9.39.2",
