--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,12 +3,9 @@
   "name": "utiliti",
   "compatibility_date": "2025-11-17",
   "compatibility_flags": ["nodejs_compat"],
-  "workers_dev": true,
-  "main": "./build/worker/index.js",
-  "assets": {
-    "directory": "./build/client",
-    "binding": "ASSETS",
-    "run_worker_first": true,
+  "main": "./workers/app.ts",
+  "observability": {
+    "enabled": true,
   },
   "kv_namespaces": [
     {
