--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "react-router build",
     "deploy": "npm run build && wrangler deploy",
     "start": "wrangler dev",
-    "typecheck": "wrangler types && react-router typegen && tsc",
+    "typecheck": "npm run cf-typegen && react-router typegen && tsc -b",
     "prettier": "prettier --write --ignore-path .gitignore .",
     "test:e2e": "playwright test",
-    "typegen": "wrangler types",
-    "lint": "eslint"
+    "cf-typegen": "wrangler types",
+    "lint": "eslint",
+    "postinstall": "npm run cf-typegen"
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
@@ -43,7 +44,6 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.20.1",
-    "@cloudflare/workers-types": "^4.20260109.0",
     "@eslint/compat": "^2.0.1",
     "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.57.0",
@@ -51,6 +51,7 @@
     "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^25.0.9",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
