--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,15 @@
 {
-  "include": [
-    ".react-router/types/**/*",
-    "app/**/*",
-    "app/**/.server/**/*",
-    "app/**/.client/**/*",
-    "worker-configuration.d.ts"
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.cloudflare.json" },
   ],
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["@cloudflare/workers-types", "vite/client"],
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "resolveJsonModule": true,
-    "target": "ES2022",
-    "strict": true,
-    "allowJs": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
-    "paths": {
-      "~/*": ["./app/*"]
-    },
     "checkJs": true,
     "verbatimModuleSyntax": true,
-
-    // Vite takes care of building everything, not tsc.
-    "noEmit": true
-  }
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "types": ["./worker-configuration.d.ts"],
+  },
 }
