--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,6 +4,12 @@
   "compatibility_date": "2025-11-17",
   "compatibility_flags": ["nodejs_compat"],
   "main": "./workers/app.ts",
+  "workers_dev": false,
+  "preview_urls": true,
+  "routes": [
+    { "pattern": "utiliti.dev", "custom_domain": true },
+    { "pattern": "www.utiliti.dev", "custom_domain": true },
+  ],
   "observability": {
     "enabled": true,
   },
