--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,16 +7,8 @@
   "workers_dev": false,
   "preview_urls": true,
   "routes": [
-    {
-      "pattern": "utiliti.dev",
-      "custom_domain": true,
-      "override_existing_dns_record": true,
-    },
-    {
-      "pattern": "www.utiliti.dev",
-      "custom_domain": true,
-      "override_existing_dns_record": true,
-    },
+    { "pattern": "utiliti.dev", "custom_domain": true },
+    { "pattern": "www.utiliti.dev", "custom_domain": true },
   ],
   "observability": {
     "enabled": true,
