--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "files": [],
   "references": [
     { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.cloudflare.json" },
+    { "path": "./tsconfig.cloudflare.json" }
   ],
   "compilerOptions": {
     "checkJs": true,
@@ -10,6 +10,6 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
-    "types": ["./worker-configuration.d.ts"],
-  },
+    "types": ["./worker-configuration.d.ts"]
+  }
 }
